apps/order-mgt/base/order-mgt/deployconfig.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: vaccineorderms
    app.kubernetes.io/version: 0.0.3
    app: vaccineorderms
    app.openshift.io/runtime: quarkus
  name: vaccineorderms
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: vaccineorderms
    app.kubernetes.io/version: 0.0.3
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: vaccineorderms
    app.kubernetes.io/version: 0.0.3
    app: vaccineorderms
    app.openshift.io/runtime: quarkus
  name: vaccineorderms
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: vaccineorderms
    app.kubernetes.io/version: 0.0.3
  template:
    metadata:
      annotations:
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8080"
      labels:
        app.kubernetes.io/name: vaccineorderms
        app.kubernetes.io/version: 0.0.3
        app: vaccineorderms
        app.openshift.io/runtime: quarkus
    spec:
      terminationGracePeriodSeconds: 30
      securityContext: {}
      containers:
      - args:
        - -jar
        - /deployments/app.jar
        - -cp
        - /deployments/lib/io.quarkus.quarkus-security-runtime-spi-1.11.3.Final.jar:/deployments/lib/io.quarkus.quarkus-vertx-http-dev-console-runtime-spi-1.11.3.Final.jar:/deployments/lib/io.quarkus.security.quarkus-security-1.1.3.Final.jar:/deployments/lib/io.netty.netty-codec-4.1.49.Final.jar:/deployments/lib/io.quarkus.quarkus-netty-1.11.3.Final.jar:/deployments/lib/io.quarkus.quarkus-vertx-core-1.11.3.Final.jar:/deployments/lib/io.vertx.vertx-web-common-3.9.5.jar:/deployments/lib/io.vertx.v [...]
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: ibmcase/vaccineorderms:0.0.3
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: vaccineorderms
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: kafka-cert
          readOnly: false
          subPath: ""
        - mountPath: /deployments/certs/user
          name: user-cert
          readOnly: false
          subPath: ""
      serviceAccount: vaccine-runtime
      volumes:
      - name: kafka-cert
        secret:
          optional: false
          secretName: kafka-cluster-ca-cert
      - name: user-cert
        secret:
          optional: false
          secretName: tls-user
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: vaccineorderms
    app.kubernetes.io/version: 0.0.3
    app: vaccineorderms
    app.openshift.io/runtime: quarkus
  name: vaccineorderms
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: vaccineorderms
